<resources>
    <string name="app_name">Bridhop</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_about">About</string>
    <string name="title_user">User</string>
    <string name="partner_name">FIAP</string>
    <string name="app_title">Bridhop made with FIAP</string>
    <string name="schneider_weisse_tap_7_name">Tap 7 - Schneider Weisse</string>
    <string name="schornstein_imperial_ipa_name">Imperial IPA - Schornstein</string>
    <string name="bodebrown_neipa_name">NEIPA - Bodebrown</string>
    <string name="bodebrown_imperial_ipa_name">Imperial IPA - Bodebrown</string>
    <string name="about_more">More about</string>
    <string name="get_user_image">Get user image</string>
    <string name="back">Back</string>
    <string name="github_text">Hotequil (GitHub)</string>
    <string name="discord_text">Hotequil (Discord)</string>
    <string name="text_image">Imagem de Hotequil</string>
    <string name="see_maps">See maps</string>
    <string name="location">Location</string>
    <string name="go_routes">Go routes</string>
    <string name="web_view">WebView</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="play">Play</string>
    <string name="animations">Animations</string>
    <string name="reset">Reset</string>
    <string name="cep">CEP</string>
    <string name="fill_cep">Fill your CEP</string>
    <string name="get_address">Get address</string>
    <string name="generate_notification">Generate notification</string>
    <string name="notifications">Notifications</string>
    <string name="channel_name">Local notifications (name)</string>
    <string name="channel_description">Local notifications (description)</string>
</resources>
