<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp"
            tools:context=".ui.products.ProductsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <TextView android:id="@+id/text_products"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAlignment="center"
                  android:text="@string/title_products"
                  android:textSize="24sp"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent" />

        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/text_products"
                     android:stretchColumns="0, 1">
            <TableRow tools:ignore="UselessParent">
                <ImageView android:layout_width="112dp"
                           android:layout_height="224dp"
                           android:src="@drawable/schneider_weisse_tap_7"
                           android:contentDescription="@string/schneider_weisse_tap_7_name" />

                <ImageView android:layout_width="112dp"
                           android:layout_height="224dp"
                           android:src="@drawable/schornstein_imperial_ipa"
                           android:contentDescription="@string/schornstein_imperial_ipa_name" />
            </TableRow>

            <TableRow tools:ignore="UselessParent">
                <ImageView android:layout_width="112dp"
                           android:layout_height="224dp"
                           android:src="@drawable/bodebrown_neipa"
                           android:contentDescription="@string/bodebrown_neipa_name" />

                <ImageView android:layout_width="112dp"
                           android:layout_height="224dp"
                           android:src="@drawable/bodebrown_imperial_ipa"
                           android:contentDescription="@string/bodebrown_imperial_ipa_name" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
