<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.home.HomeFragment">

    <ImageView android:layout_width="124dp"
               android:layout_height="124dp"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:src="@drawable/fiap"
               android:id="@+id/partner_logo"
               android:contentDescription="@string/partner_name" />

    <TextView android:layout_marginTop="16dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/partner_logo"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:text="@string/app_title"
              android:id="@+id/title_page"
              android:textAlignment="center"
              android:textSize="32sp"/>

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/title_page"
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/actions"
                 android:stretchColumns="0, 1">
        <TableRow tools:ignore="UselessParent">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/see_maps"
                    android:text="@string/see_maps"
                    tools:ignore="ButtonStyle" />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:id="@+id/location"
                    android:text="@string/location"
                    tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/go_routes"
            app:layout_constraintTop_toBottomOf="@id/actions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/go_routes"
            tools:ignore="ButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
