<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".AnimationsActivity">
    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:paddingHorizontal="16dp"
                 android:id="@+id/actions"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:stretchColumns="0, 1">
        <TableRow tools:ignore="UselessParent">
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/back"
                    android:text="@string/back"
                    android:layout_marginEnd="8dp"
                    tools:ignore="ButtonStyle" />

            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reset"
                    android:text="@string/reset"
                    android:layout_marginStart="8dp"
                    tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>

    <TextView android:id="@+id/text"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/actions"
              android:text="@string/app_name"
              android:textAlignment="center"
              android:textSize="32sp"
              android:layout_marginTop="16dp"
              android:textColor="@color/material_dynamic_primary60"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <ListView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/text"
              android:paddingBottom="176dp"
              android:id="@+id/list_view"
              android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
